--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
 	"dependencies": {
+		"bcryptjs": "^2.4.3",
 		"dotenv": "^16.0.0",
 		"express": "^4.17.3",
+		"jsonwebtoken": "^8.5.1",
 		"mongoose": "^6.2.4",
 		"morgan": "^1.10.0",
-		"pug": "^3.0.2"
+		"nodemailer": "^6.7.2",
+		"pug": "^3.0.2",
+		"validator": "^13.7.0"
 	},
 	"scripts": {
 		"start": "nodemon server.js",
