--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
 	"dependencies": {
 		"bcryptjs": "^2.4.3",
+		"cookie-parser": "^1.4.6",
 		"dotenv": "^16.0.0",
 		"express": "^4.17.3",
 		"jsonwebtoken": "^8.5.1",
 		"mongoose": "^6.2.4",
 		"morgan": "^1.10.0",
 		"nodemailer": "^6.7.2",
-		"nodemon": "^2.0.15",
 		"pug": "^3.0.2",
+		"slugify": "^1.6.5",
 		"validator": "^13.7.0"
 	},
 	"scripts": {
